etc/tests/error/parser/attribute-needs-function.ny
;; expect: function attributes must be followed by 'fn'
use std.core

@inline
print(1)
